<resources>
    <string name="app_name">Car Dock</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_landing_page">landingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="selling_profile">Selling Profile</string>
    <string name="logout">Logout</string>
    <string name="selling_view">Selling View</string>

    <string name="nuyun_pabasara">Nuyun Pabasara</string>
    <string name="nuyunp_sltc_ac_lk">nuyunp@sltc.ac.lk</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_ad">My Ad</string>
    <string name="user_name">   User name</string>
</resources>