<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cardock.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_seller"
        android:name="com.example.cardock.ui.sellingProfile.SellingProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_selling_profile" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.cardock.ui.login.LoginActivity"
        android:label="@string/logout"
        tools:layout="@layout/activity_login"
        />

</navigation>